<resources>
    <string name="recaptcha_site_key">AIzaSyARGw9XS9YKgiD0cTksAtzFMAZsu_I-UKk</string>
    <string name="default_web_client_id">556654868745-n5sfou4nohi0978fr8sad6hm6kcvh58c.apps.googleusercontent.com</string>

    <string name="app_name">MD09_PharmaPoly</string>
    <string name="skip">Skip</string>
    <string name="healthcare_access">Importance of healthcare access.</string>
    <string name="quality_healthcare_access">Access quality healthcare services at your fingertips with PharmaPoly</string>
    <string name="stay_connected_health">Stay connected to your health with our mobile app</string>
    <string name="welcome">Welcome,</string>
    <string name="sub_title_phone_number_screen">Please enter your phone number to continue.</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="next">Next</string>
    <string name="account_registration_prompt">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="google_login_option">Continue with Google.</string>
    <string name="verification_code_input">Enter the verify code</string>
    <string name="create_new_password">TẠO MẬT KHẨU MỚI</string>
    <string name="verification_code_sent_message">We just sent you a verification code via phone:</string>
    <string name="verification_code_expiration">The verify code will expire in</string>
    <string name="enter_password_upper">ENTER PASSWORD</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_login">Please enter your password to log in</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="error_empty_phone">Phone number cannot be empty!</string>
    <string name="server_error">Server error, please try again later!</string>
    <string name="error_phone_password_required">Phone number and password are required!</string>
    <string name="error_password_required">Password cannot be empty!</string>
    <string name="error_user_not_found">User not found!</string>
    <string name="error_invalid_credentials">Password or phone number is incorrect!</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend code</string>
    <string name="error_otp_required">Please enter the full OTP code!</string>
    <string name="password_requirements">Bạn có thể tạo mật khẩu mới với ít nhất 8 ký tự, bao gồm ít nhất 1 chữ cái viết hoa, 1 số và 1 ký tự đặc biệt.</string>

    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="profile_updated_successfully">Profile updated successfully!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="error_fill_all_fields">You must fill in all fields!</string>
    <string name="error_json">JSON error</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_password">Nhập lại mật khẩu mới</string>
    <string name="enter_new_password">Nhập mật khẩu mới</string>
    <string name="reenter_new_password">Nhập lại mật khẩu mới</string>
    <string name="complete">Đăng ký</string>
    <string name="error_enter_password">Please enter your password</string>
    <string name="error_password_mismatch">Confirmation password does not match</string>
    <string name="error_incorrect_password">Incorrect current password!</string>

    <string name="password_policy">Password must have at least 8 characters, 1 uppercase letter, 1 number, and 1 special character.</string>
    <string name="account_created">Account created successfully!</string>
    <string name="otp_request_limit">You have requested the OTP code too many times. Please wait and try again later.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">Brand</string>
    <string name="review">Review</string>
    <string name="my_orders">My Orders</string>
    <string name="view_all">View all</string>
    <string name="processing">Processing</string>
    <string name="shipping">Shipping</string>
    <string name="delivered">Delivered</string>
    <string name="exchange_return">Return/Refund</string>
    <string name="account">Account</string>
    <string name="personal_info">Personal Information</string>
    <string name="manage_address">Manage Address Book</string>
    <string name="manage_cards">Manage Payment Cards</string>
    <string name="about_pharmapoly">About PharmaPoly Pharmacy</string>
    <string name="pharmacy_intro">Pharmacy Introduction</string>
    <string name="business_license">Business License</string>
    <string name="deposit_policy">Deposit Policy</string>
    <string name="content_policy">Content Policy</string>
    <string name="medicine_return_policy">Medicine Exchange Return Policy</string>
    <string name="shipping_policy">Shipping Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="customer">Customer</string>
    <string name="logout">Logout</string>
    <string name="your_cart">Các sản phẩm trong giỏ hàng</string>
    <string name="cart_empty">No products in cart</string>
    <string name="confirm_remove_cart">Are you sure you want to remove this item from your cart?</string>
    <string name="all">All</string>
    <string name="total_payment">Total Payment</string>
    <string name="purchase">Purchase</string>
    <string name="select_quantity_unit">Select Quantity, Unit</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="you_save">You save</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="cart_add_success">Product added to cart successfully</string>
    <string name="change_password">Change Password</string>
    <string name="change_avatar">Change Profile Picture</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="shipping_phone">Shipping Phone Number</string>
    <string name="user_update_success">User information updated successfully</string>
    <string name="discount_now">Get off now</string>
    <string name="valid_until">Valid until</string>
    <string name="address_input_placeholder">Enter street name, building, house number</string>
    <string name="update">Update</string>
    <string name="address_update_success">Address updated successfully!</string>
    <string name="cancelled">Cancelled</string>
    <string name="no_products_selected">You haven\'t selected any products to buy yet.</string>
    <string name="payment">Payment</string>
    <string name="order">Order</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_shipping_fee">Total Shipping Fee</string>
    <string name="total_product_cost">Total Product Cost</string>
    <string name="product">Product</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod">Cash on Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="momo_payment">Payment via Momo e-wallet</string>
    <string name="agree">Agree</string>
    <string name="no_shipping_address">You don\'t have a shipping address yet.</string>
    <string name="show_more">Show More</string>
    <string name="no_orders">You don\'t have any orders yet</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="details">Details</string>
    <string name="status_pending">Pending</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="status_ready_to_pick">Waiting for GHN pickup</string>
    <string name="status_picking">GHN is picking up</string>
    <string name="status_picked">GHN picked up</string>
    <string name="status_delivering">Delivering</string>
    <string name="status_money_collect_delivering">Delivering (COD)</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_delivery_fail">Delivery failed</string>
    <string name="status_waiting_to_return">Waiting to return</string>
    <string name="status_return">Returning</string>
    <string name="status_returned">Returned</string>
    <string name="status_return_fail">Return failed</string>
    <string name="status_canceled">Order canceled</string>
    <string name="order_info">Order Info</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order_date">Order Date</string>
    <string name="status">Status</string>
    <string name="cancel_order_title">Confirm Order Cancellation</string>
    <string name="cancel_order_message">Are you sure you want to cancel this order?</string>
    <string name="order_cancelled_success">Order successfully canceled!</string>
    <string name="order_cancelled_request_sent">Cancellation request sent</string>

    <string name="ghn_shipping_code">Shipping Code</string>

    <string name="return_order">Return item</string>
    <string name="return_order_title">Confirm Return</string>
    <string name="return_order_message">Are you sure you want to return this item?</string>
    <string name="order_success">Order placed successfully!</string>

    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="payment_status">Payment Status</string>
    <string name="payment_paid">Paid</string>
    <string name="payment_pending">Pending</string>
    <string name="payment_failed">Failed</string>
    <string name="payment_refunded">Refunded</string>
    <string name="cancel_request_sent">Cancellation request sent</string>
    <string name="return_request_sent">Return request sent</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="product_information">Product Information</string>

    <string name="order_status_title">Order Status</string>
    <string name="return_request_success">Your return request has been submitted successfully!</string>
    <string name="category">Category</string>
    <string name="specification">Specification</string>
    <string name="origin_country">Country of origin</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="short_description">Short description</string>
    <string name="supported_banks">Supported banks</string>

    <string name="confirm_received">Confirm Received</string>
    <string name="confirm_received_title">Order Received</string>
    <string name="confirm_received_message">Have you received this order?</string>
    <string name="language">Language</string>

    <string name="check_user_info">Please check your personal information!</string>
    <string name="search_product">Tạo mật khẩu</string>
    <string name="search_history">Search history</string>
    <string name="review_count">Number of reviewers</string>
    <string name="hi">Hi</string>
    <string name="rejected">Rejected</string>
    <string name="product_sold_out">This product has been discontinued forever</string>
    <string name="product_suspended">This product is temporarily unavailable</string>
    <string name="product_out_of_stock">This product is out of stock</string>
    <string name="clear_all">Clear All</string>
    <string name="read_all">Read All</string>
</resources>