<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.activity.SignupPassword">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_corners"
        android:backgroundTint="@color/blue_CE4"
        android:orientation="vertical">
        <!-- Phần đầu tiêu đề -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/arrow_back"
                android:backgroundTint="@color/white_FFF" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/be_vietnam_pro_bold"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="Tạo mật khẩu"
                android:layout_marginRight="20dp"
                android:textColor="@color/white_FFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="56dp"
        android:fontFamily="@font/be_vietnam_pro_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_password"
        android:textColor="@color/black_333"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:fontFamily="@font/be_vietnam_pro_light"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_requirements"
        android:textColor="@color/black_333"
        android:textSize="14sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textStyle="bold"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:id="@+id/edt_new_password"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_DCD"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:hint="@string/enter_new_password"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_input_background" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_DCD"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:hint="@string/reenter_new_password"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/custom_input_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/red_757"
        android:fontFamily="@font/be_vietnam_pro_light"
        android:text="*Error Message"
        android:textSize="14sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_create_account"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/be_vietnam_pro_bold"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>