<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="48dp"
    android:paddingBottom="56dp"
    android:paddingHorizontal="36dp"
    tools:context=".ui.view.activity.PhoneNumber">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:fontFamily="@font/be_vietnam_pro_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/blue_CB7"
            android:text="Pharma"/>
        <TextView
            android:fontFamily="@font/be_vietnam_pro_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/red_757"
            android:text="Poly"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <TextView
        android:textSize="16sp"
        android:fontFamily="@font/be_vietnam_pro_light"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title_phone_number_screen"
        android:textColor="@color/black"/>
    <TextView
        android:layout_marginTop="108dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textStyle="bold"
        android:textColor="@color/black_333"
        android:textSize="16sp"/>
    <EditText
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/edt_phone_number"
        android:lines="1"
        android:inputType="phone"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_DCD"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:text=""
        android:hint="@string/enter_phone_number"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/custom_input_background"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_check_phone_number"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/gray_DCD"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_check_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/be_vietnam_pro_bold"
                android:text="@string/next"
                android:textColor="@color/gray_E9E"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:gravity="center">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/account_registration_prompt"-->
<!--            android:textColor="@color/black_333"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_marginRight="6dp"/>-->
<!--        <TextView-->
<!--            android:fontFamily="@font/be_vietnam_pro_extrabold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/sign_up"-->
<!--            android:textColor="@color/blue_CE4"-->
<!--            android:textSize="16sp"/>-->

<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingVertical="12dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="86dp"
            android:layout_height="1dp"
            android:background="@color/gray_DCD" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textColor="@color/gray_DCD"
            android:layout_marginHorizontal="12dp"/>

        <LinearLayout
            android:layout_width="86dp"
            android:layout_height="1dp"
            android:background="@color/gray_DCD" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/gray_6f4"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_google"/>
                <TextView
                    android:layout_marginLeft="12dp"
                    android:fontFamily="@font/be_vietnam_pro_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_login_option"
                    android:textSize="16sp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>