<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.activity.ProfileUpdate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_regular"
            android:text="Thông tin cá nhân"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_marginTop="26dp"
        android:fontFamily="@font/be_vietnam_pro_bold"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Đổi mật khẩu"
        android:layout_marginLeft="20dp"
        android:textColor="#1A00FF"
        android:textSize="36sp"/>

    <TextView
        android:layout_marginTop="38dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mật khẩu cũ"
        android:fontFamily="@font/overpass_regular"
        android:textStyle="bold"
        android:textColor="@color/black_333"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/current_change_password"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_DCD"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:hint="Mật khẩu cũ"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/borderm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quên mật khẩu ?"
        android:fontFamily="@font/overpass_regular"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:fontFamily="@font/overpass_regular"
        android:textStyle="bold"
        android:textColor="@color/black_333"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/new_change_password"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_DCD"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:hint="@string/enter_new_password"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/borderm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:fontFamily="@font/overpass_regular"
        android:textStyle="bold"
        android:textColor="@color/black_333"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/confirm_change_password"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/be_vietnam_pro_medium"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_DCD"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:hint="@string/reenter_new_password"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/borderm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/chim"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_change_password"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/nav_background"
        app:cardCornerRadius="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/change_pass_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/be_vietnam_pro_bold"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
